[project]
name = "py-mcp-google-toolbox"
version = "0.1.0"
description = "Google Toolbox"
authors = [
    { name = "Anthony Kim", email = "jikime@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pydantic[email]>=2.11.4",
]
